--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+.container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 1em;
+
+}
+
 img {
     width: 100%;
+    height: auto;
 }
